--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Keybase SignUp</h1>
+    <h1></h1>
     <div class="form">
     
         <!-- <ul class="tab-group">
@@ -25,7 +25,7 @@
             <div class="col s12 m6">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
+                        <span class="card-title">Keybase SignUp</span>
                         <p>Type in some information here which will advise the the user of the significence and first steps in 
                             signing up for keybase and which poriton of the process they are current at.
                         </p>
@@ -91,7 +91,7 @@
             <div class="col s12 m6">
                 <div class="card blue-grey darken-1">
                     <div class="card-content white-text">
-                        <span class="card-title">Card Title</span>
+                        <span class="card-title">Keybase Login</span>
                         <p>For returning customers</p>
                     </div>
 
@@ -195,19 +195,20 @@
         // Send async message to main process
         ipcRenderer.send('async', JSON.stringify(requestObject));
         console.log("sent the request object");
-
+        
         // Listen for async-reply message from main process
         ipcRenderer.on('async-reply', (event, arg) => {
-            // Print 2
+
             console.log(arg);
-            return arg;
+            console.log('recieved the keybase response');
             // Send sync message to main process
             //let mainValue = ipcRenderer.sendSync('sync', 3);
             // Print 4
             //console.log(mainValue);
         });
-        
     }
+
+
 </script>
 </body>
 
