--- a/views/index.html
+++ b/views/index.html
@@ -194,11 +194,11 @@
     function speak(requestObject) {
 
         // Send async message to main process
-        ipcRenderer.send('async', JSON.stringify(requestObject));
+        ipcRenderer.send('sign-up', JSON.stringify(requestObject));
         console.log("sent the request object");
         
         // Listen for async-reply message from main process
-        ipcRenderer.on('async-reply', (event, arg) => {
+        ipcRenderer.on('sign-up-reply', (event, arg) => {
             console.log(event);
             console.log(arg);
             console.log('recieved the keybase response');
@@ -210,7 +210,7 @@
         });
 
         // Listen for main message
-        ipcRenderer.on('async-reply', (event, arg) => {
+        ipcRenderer.on('sign-up-reply', (event, arg) => {
             
             console.log(arg);
             // Invoke method directly on main process
